Fix CORS allowedOriginPatterns in CorsConfig.java and enhance authentication error handling in frontend